Set revision date to match Trac.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,7 +23,7 @@ authors:
 # Current document revision date, YYYY-MM-DD
 # Only set this field if you need to manually fix the revision date;
 # the revision date is obtained from the HEAD Git commit otherwise.
-# last_revised: 'YYYY-MM-DD'
+last_revised: '2014-03-31'
 
 # Version. Use Semvar, e.g., 1.0, including .dev, as necessary
 # This version string should correspond to the git tag when the document is published on Zenodo
